# agent-harness-ops

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  tweet.md
app/: config.py  db.py  models.py  redis_store.py
app/agent/: cache.py  model.py  orchestrator.py  readme_cache.py  token_utils.py  tools.py
app/context/: AGENTS.md
app/routes/: content.py  health.py  result.py
app/skills/content-reviewer/: SKILL.md
app/skills/devto-writer/: SKILL.md
app/skills/extractor/: SKILL.md
app/skills/linkedin-writer/: SKILL.md
app/skills/x-writer/: SKILL.md
app/worker/: celery_app.py  tasks.py
demo/projects/: AGENTS.md
demo/skills/aws/: SKILL.md  examples.md  instructions.md
demo/skills/langgraph/: SKILL.md  examples.md  instructions.md
demo/skills/python/: SKILL.md  examples.md  instructions.md
demo/skills/report-writer/: SKILL.md  examples.md  instructions.md
docs/: diagrams.md  doc.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ResultsPanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  tabs.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: run_once.py
