[project]
name = "deepagents-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.8",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "langfuse>=2.0.0,<3.0.0",
]
